2011-07-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/compiler-public.hxx:
 - Check for std::auto_ptr.
 - Check for std::move().
 - Check for std::unique_ptr.
 - Workaround for missing std::move().
 include/pqxx/basic_connection.hxx, include/pqxx/connection_base.hxx,
 src/connection_base.cxx, test/test014.cxx:
 - Replace auto_ptr with unique_ptr for managing noticers, if available.
 - New typedef: noticer_ptr to hide the difference (a little).
 - Provide compatibility with auto_ptr on systems with both.
 - set_noticer now needs reference to smart pointer.
 - Fixes #214.
2011-05-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-internal.hxx:
 - Include <cstddef>; may fix #213 on Fedora 15.  Thanks zelda.
2011-05-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
 - Always exit when "make check" fails.  Missed a spot earlier.
 - Work harder to get a user name.
2011-04-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Support --enable-documentation (defaults to yes).
 tools/pqxx-fulltest:
 - Use --disable-documentation for test runs.
 - Add sbin to path; that's where start-stop-daemon lives.
2011-04-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
 - Quiesce for a bit after stopping backends.
 - Don't wait after create_database; latency covered by build.
2011-04-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
 - Don't break if start-stop-daemon has no work to do.
 - Remove pidfile after stopping a backend.
2011-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
 - Complete rewrite.  Faster, cleaner.
2011-04-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Fixed some warnings in clang++ (fatal with -Werror).
2011-04-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Workaround for "noreturn" attribute in clang++ 2.8.
 src/pipeline.cxx:
 - Cosmetic: std-qualify throw spec.
2011-03-29  Jeroen T. Vermeulen <jtv@xs4all.nl>